# productiondeck

./: CLAUDE.md  Cargo.toml  README.md  StreamDeck_Protocol_Reference.md  build-devices.sh
.cargo/: config.toml
.github/workflows/: build.yml
firmware/: Cargo.toml  build.rs
firmware/.cargo/: config.toml
firmware/src/: buttons.rs  channels.rs  config.rs  display.rs  hardware.rs  lib.rs  supervisor.rs  types.rs  usb.rs
firmware/src/device/: mini.rs  mod.rs  original.rs  original_v2.rs  plus.rs  xl.rs
firmware/src/protocol/: mod.rs  module.rs  module_15_32.rs  module_6.rs  v1.rs  v2.rs
src/: buttons.rs  channels.rs  config.rs  display.rs  display_module6_st7789.rs  display_spi_dma.rs  entry.rs  hardware.rs  lib.rs  supervisor.rs  types.rs  usb.rs
src/device/: mini.rs  mod.rs  neo.rs  plus.rs  plus_xl.rs
src/protocol/: mod.rs  module.rs  module_6.rs  v1.rs  v2.rs
tcp-emulator/: Cargo.toml
tcp-emulator/src/: cora.rs  discovery.rs  feature_reports.rs  input.rs  main.rs  server.rs  session.rs  studio.rs
