[package]
name = "productiondeck"
version = "0.1.0"
edition = "2021"
description = "RP2040-based StreamDeck compatible device using Embassy"
authors = ["ProductionDeck Contributors"]
license = "MIT OR Apache-2.0"

[lib]
name = "productiondeck"
path = "src/lib.rs"

[dependencies]
# Embassy framework for RP2040
embassy-rp = { version = "0.10", features = ["defmt", "unstable-pac", "time-driver", "rp2040", "critical-section-impl"] }
embassy-usb = { version = "0.6", features = ["defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-executor = { version = "0.10", features = ["defmt", "platform-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-futures = "0.1"
embassy-sync = "0.8"

# Cortex-M runtime
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1.0"

# Hardware abstraction
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.3", features = ["async"] }
portable-atomic = { version = "1.0", features = ["critical-section"] }

# Display and graphics
st7735-lcd = "0.10"
embedded-graphics = "0.8"
embedded-graphics-core = "0.4"

# USB HID
usbd-hid = "0.10"

# Utilities
heapless = { version = "0.9", default-features = false }
nb = "1.1"
panic-halt = "1.0"
defmt = "1.0.1"
defmt-rtt = "1.1"
fixed = "1.31"
static_cell = "2.1"

# Development dependencies
[dev-dependencies]
defmt-test = "0.4"

# Cargo build configuration
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = true
opt-level = 's'
overflow-checks = false

[profile.dev]
codegen-units = 1
debug = 2
incremental = false
opt-level = "z"

[[bin]]
name = "original"
path = "src/bin/original.rs"
test = false
bench = false

[[bin]]
name = "original-v2"
path = "src/bin/original_v2.rs"
test = false
bench = false

[[bin]]
name = "xl"
path = "src/bin/xl.rs"
test = false
bench = false

[[bin]]
name = "plus"
path = "src/bin/plus.rs"
test = false
bench = false

[[bin]]
name = "mk2"
path = "src/bin/mk2.rs"
test = false
bench = false

[[bin]]
name = "neo"
path = "src/bin/neo.rs"
test = false
bench = false

[[bin]]
name = "plus-xl"
path = "src/bin/plus_xl.rs"
test = false
bench = false

[[bin]]
name = "module6"
path = "src/bin/module6.rs"
test = false
bench = false

[[bin]]
name = "module15"
path = "src/bin/module15.rs"
test = false
bench = false

[[bin]]
name = "module32"
path = "src/bin/module32.rs"
test = false
bench = false

[features]
default = []
